src/generated/StructuredTextParser.ts
// Generated from /home/vincent/Documents/Git/GitHub/vscode-twincat-st/src/StructuredText.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { StructuredTextVisitor } from "./StructuredTextVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class StructuredTextParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly T__34 = 35;
    public static readonly T__35 = 36;
    public static readonly T__36 = 37;
    public static readonly T__37 = 38;
    public static readonly T__38 = 39;
    public static readonly T__39 = 40;
    public static readonly T__40 = 41;
    public static readonly T__41 = 42;
    public static readonly T__42 = 43;
    public static readonly T__43 = 44;
    public static readonly T__44 = 45;
    public static readonly T__45 = 46;
    public static readonly T__46 = 47;
    public static readonly T__47 = 48;
    public static readonly T__48 = 49;
    public static readonly T__49 = 50;
    public static readonly T__50 = 51;
    public static readonly T__51 = 52;
    public static readonly T__52 = 53;
    public static readonly T__53 = 54;
    public static readonly T__54 = 55;
    public static readonly T__55 = 56;
    public static readonly T__56 = 57;
    public static readonly PROGRAM = 58;
    public static readonly END_PROGRAM = 59;
    public static readonly FUNCTION_BLOCK = 60;
    public static readonly END_FUNCTION_BLOCK = 61;
    public static readonly FUNCTION = 62;
    public static readonly END_FUNCTION = 63;
    public static readonly PROPERTY = 64;
    public static readonly END_PROPERTY = 65;
    public static readonly IMPLEMENTS = 66;
    public static readonly EXTENDS = 67;
    public static readonly GET = 68;
    public static readonly END_GET = 69;
    public static readonly SET = 70;
    public static readonly END_SET = 71;
    public static readonly VAR = 72;
    public static readonly VAR_INPUT = 73;
    public static readonly VAR_OUTPUT = 74;
    public static readonly VAR_IN_OUT = 75;
    public static readonly VAR_TEMP = 76;
    public static readonly VAR_EXTERNAL = 77;
    public static readonly VAR_GLOBAL = 78;
    public static readonly VAR_INST = 79;
    public static readonly VAR_STAT = 80;
    public static readonly END_VAR = 81;
    public static readonly IF = 82;
    public static readonly THEN = 83;
    public static readonly ELSIF = 84;
    public static readonly ELSE = 85;
    public static readonly END_IF = 86;
    public static readonly CASE = 87;
    public static readonly ARRAY = 88;
    public static readonly OF = 89;
    public static readonly END_CASE = 90;
    public static readonly WHILE = 91;
    public static readonly DO = 92;
    public static readonly END_WHILE = 93;
    public static readonly REPEAT = 94;
    public static readonly UNTIL = 95;
    public static readonly END_REPEAT = 96;
    public static readonly FOR = 97;
    public static readonly TO = 98;
    public static readonly BY = 99;
    public static readonly END_FOR = 100;
    public static readonly RETURN = 101;
    public static readonly EXIT = 102;
    public static readonly CONTINUE = 103;
    public static readonly AND = 104;
    public static readonly OR = 105;
    public static readonly XOR = 106;
    public static readonly METHOD = 107;
    public static readonly END_METHOD = 108;
    public static readonly INTERFACE = 109;
    public static readonly END_INTERFACE = 110;
    public static readonly STRUCT = 111;
    public static readonly END_STRUCT = 112;
    public static readonly ENUM = 113;
    public static readonly END_ENUM = 114;
    public static readonly ABSTRACT = 115;
    public static readonly FINAL = 116;
    public static readonly CONSTANT = 117;
    public static readonly PUBLIC = 118;
    public static readonly PRIVATE = 119;
    public static readonly PROTECTED = 120;
    public static readonly INTERNAL = 121;
    public static readonly MOD = 122;
    public static readonly TYPE = 123;
    public static readonly END_TYPE = 124;
    public static readonly CARET = 125;
    public static readonly REFERENCE_TO = 126;
    public static readonly POINTER_TO = 127;
    public static readonly BOOL = 128;
    public static readonly INTEGER_NUMBER = 129;
    public static readonly REAL_NUMBER = 130;
    public static readonly STRING_LITERAL = 131;
    public static readonly ID = 132;
    public static readonly TIME = 133;
    public static readonly DATE = 134;
    public static readonly TIME_OF_DAY = 135;
    public static readonly DATETIME = 136;
    public static readonly WS = 137;
    public static readonly COMMENT = 138;
    public static readonly COMMENT_BLOCK = 139;
    public static readonly RULE_compilationUnit = 0;
    public static readonly RULE_program = 1;
    public static readonly RULE_function = 2;
    public static readonly RULE_method = 3;
    public static readonly RULE_property = 4;
    public static readonly RULE_functionBlock = 5;
    public static readonly RULE_interface = 6;
    public static readonly RULE_varGlobalSection = 7;
    public static readonly RULE_typeDecl = 8;
    public static readonly RULE_enumDecl = 9;
    public static readonly RULE_enumMember = 10;
    public static readonly RULE_initialValue = 11;
    public static readonly RULE_structDecl = 12;
    public static readonly RULE_implementsClause = 13;
    public static readonly RULE_extendsClause = 14;
    public static readonly RULE_member = 15;
    public static readonly RULE_varDeclSection = 16;
    public static readonly RULE_varSectionType = 17;
    public static readonly RULE_varDecl = 18;
    public static readonly RULE_exprOrArrayInit = 19;
    public static readonly RULE_arrayInit = 20;
    public static readonly RULE_type = 21;
    public static readonly RULE_baseType = 22;
    public static readonly RULE_builtinType = 23;
    public static readonly RULE_statementSection = 24;
    public static readonly RULE_statement = 25;
    public static readonly RULE_assignment = 26;
    public static readonly RULE_assignmentOperator = 27;
    public static readonly RULE_callStatement = 28;
    public static readonly RULE_argumentList = 29;
    public static readonly RULE_argument = 30;
    public static readonly RULE_ifStatement = 31;
    public static readonly RULE_caseStatement = 32;
    public static readonly RULE_caseElement = 33;
    public static readonly RULE_caseValue = 34;
    public static readonly RULE_whileStatement = 35;
    public static readonly RULE_repeatStatement = 36;
    public static readonly RULE_forStatement = 37;
    public static readonly RULE_returnStatement = 38;
    public static readonly RULE_exitStatement = 39;
    public static readonly RULE_continueStatement = 40;
    public static readonly RULE_memberExpression = 41;
    public static readonly RULE_memberAccess = 42;
    public static readonly RULE_postfixOp = 43;
    public static readonly RULE_dereference = 44;
    public static readonly RULE_arrayIndex = 45;
    public static readonly RULE_call = 46;
    public static readonly RULE_literal = 47;
    public static readonly RULE_timeLiteral = 48;
    public static readonly RULE_dateLiteral = 49;
    public static readonly RULE_dateAndTimeLiteral = 50;
    public static readonly RULE_timeOfDayLiteral = 51;
    public static readonly RULE_expr = 52;
    public static readonly RULE_propertyBody = 53;
    public static readonly RULE_getter = 54;
    public static readonly RULE_setter = 55;
    public static readonly RULE_attribute = 56;
    public static readonly RULE_attributeArgList = 57;
    public static readonly RULE_attributeArg = 58;
    public static readonly RULE_accessModifier = 59;
    public static readonly RULE_modifier = 60;

    public static readonly literalNames = [
        null, "':'", "';'", "'('", "','", "')'", "':='", "'REF='", "'['", 
        "']'", "'..'", "'BOOL'", "'BIT'", "'BYTE'", "'WORD'", "'DWORD'", 
        "'LWORD'", "'USINT'", "'UINT'", "'UDINT'", "'ULINT'", "'SINT'", 
        "'INT'", "'DINT'", "'LINT'", "'REAL'", "'LREAL'", "'TIME'", "'LTIME'", 
        "'DATE'", "'TIME_OF_DAY'", "'TOD'", "'DATE_AND_TIME'", "'DT'", "'LDATE'", 
        "'LTIME_OF_DAY'", "'LTOD'", "'LDATE_AND_TIME'", "'LDT'", "'STRING'", 
        "'=>'", "'.'", "'T'", "'#'", "'D'", "'LD'", "'*'", "'/'", "'+'", 
        "'-'", "'='", "'<'", "'>'", "'<='", "'>='", "'<>'", "'{'", "'}'", 
        "'PROGRAM'", "'END_PROGRAM'", "'FUNCTION_BLOCK'", "'END_FUNCTION_BLOCK'", 
        "'FUNCTION'", "'END_FUNCTION'", "'PROPERTY'", "'END_PROPERTY'", 
        "'IMPLEMENTS'", "'EXTENDS'", "'GET'", "'END_GET'", "'SET'", "'END_SET'", 
        "'VAR'", "'VAR_INPUT'", "'VAR_OUTPUT'", "'VAR_IN_OUT'", "'VAR_TEMP'", 
        "'VAR_EXTERNAL'", "'VAR_GLOBAL'", "'VAR_INST'", "'VAR_STAT'", "'END_VAR'", 
        "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'END_IF'", "'CASE'", "'ARRAY'", 
        "'OF'", "'END_CASE'", "'WHILE'", "'DO'", "'END_WHILE'", "'REPEAT'", 
        "'UNTIL'", "'END_REPEAT'", "'FOR'", "'TO'", "'BY'", "'END_FOR'", 
        "'RETURN'", "'EXIT'", "'CONTINUE'", "'AND'", "'OR'", "'XOR'", "'METHOD'", 
        "'END_METHOD'", "'INTERFACE'", "'END_INTERFACE'", "'STRUCT'", "'END_STRUCT'", 
        "'ENUM'", "'END_ENUM'", "'ABSTRACT'", "'FINAL'", "'CONSTANT'", "'PUBLIC'", 
        "'PRIVATE'", "'PROTECTED'", "'INTERNAL'", "'MOD'", "'TYPE'", "'END_TYPE'", 
        "'^'", "'REFERENCE TO'", "'POINTER TO'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, "PROGRAM", "END_PROGRAM", "FUNCTION_BLOCK", "END_FUNCTION_BLOCK", 
        "FUNCTION", "END_FUNCTION", "PROPERTY", "END_PROPERTY", "IMPLEMENTS", 
        "EXTENDS", "GET", "END_GET", "SET", "END_SET", "VAR", "VAR_INPUT", 
        "VAR_OUTPUT", "VAR_IN_OUT", "VAR_TEMP", "VAR_EXTERNAL", "VAR_GLOBAL", 
        "VAR_INST", "VAR_STAT", "END_VAR", "IF", "THEN", "ELSIF", "ELSE", 
        "END_IF", "CASE", "ARRAY", "OF", "END_CASE", "WHILE", "DO", "END_WHILE", 
        "REPEAT", "UNTIL", "END_REPEAT", "FOR", "TO", "BY", "END_FOR", "RETURN", 
        "EXIT", "CONTINUE", "AND", "OR", "XOR", "METHOD", "END_METHOD", 
        "INTERFACE", "END_INTERFACE", "STRUCT", "END_STRUCT", "ENUM", "END_ENUM", 
        "ABSTRACT", "FINAL", "CONSTANT", "PUBLIC", "PRIVATE", "PROTECTED", 
        "INTERNAL", "MOD", "TYPE", "END_TYPE", "CARET", "REFERENCE_TO", 
        "POINTER_TO", "BOOL", "INTEGER_NUMBER", "REAL_NUMBER", "STRING_LITERAL", 
        "ID", "TIME", "DATE", "TIME_OF_DAY", "DATETIME", "WS", "COMMENT", 
        "COMMENT_BLOCK"
    ];
    public static readonly ruleNames = [
        "compilationUnit", "program", "function", "method", "property", 
        "functionBlock", "interface", "varGlobalSection", "typeDecl", "enumDecl", 
        "enumMember", "initialValue", "structDecl", "implementsClause", 
        "extendsClause", "member", "varDeclSection", "varSectionType", "varDecl", 
        "exprOrArrayInit", "arrayInit", "type", "baseType", "builtinType", 
        "statementSection", "statement", "assignment", "assignmentOperator", 
        "callStatement", "argumentList", "argument", "ifStatement", "caseStatement", 
        "caseElement", "caseValue", "whileStatement", "repeatStatement", 
        "forStatement", "returnStatement", "exitStatement", "continueStatement", 
        "memberExpression", "memberAccess", "postfixOp", "dereference", 
        "arrayIndex", "call", "literal", "timeLiteral", "dateLiteral", "dateAndTimeLiteral", 
        "timeOfDayLiteral", "expr", "propertyBody", "getter", "setter", 
        "attribute", "attributeArgList", "attributeArg", "accessModifier", 
        "modifier",
    ];

    public get grammarFileName(): string { return "StructuredText.g4"; }
    public get literalNames(): (string | null)[] { return StructuredTextParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return StructuredTextParser.symbolicNames; }
    public get ruleNames(): string[] { return StructuredTextParser.ruleNames; }
    public get serializedATN(): number[] { return StructuredTextParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, StructuredTextParser._ATN, StructuredTextParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public compilationUnit(): CompilationUnitContext {
        let localContext = new CompilationUnitContext(this.context, this.state);
        this.enterRule(localContext, 0, StructuredTextParser.RULE_compilationUnit);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 130;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 56)) & ~0x1F) === 0 && ((1 << (_la - 56)) & 4194389) !== 0) || _la === 109 || _la === 123) {
                {
                this.state = 128;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
                case 1:
                    {
                    this.state = 122;
                    this.program();
                    }
                    break;
                case 2:
                    {
                    this.state = 123;
                    this.functionBlock();
                    }
                    break;
                case 3:
                    {
                    this.state = 124;
                    this.function_();
                    }
                    break;
                case 4:
                    {
                    this.state = 125;
                    this.interface_();
                    }
                    break;
                case 5:
                    {
                    this.state = 126;
                    this.varGlobalSection();
                    }
                    break;
                case 6:
                    {
                    this.state = 127;
                    this.typeDecl();
                    }
                    break;
                }
                }
                this.state = 132;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 2, StructuredTextParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 134;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 56) {
                {
                this.state = 133;
                this.attribute();
                }
            }

            this.state = 136;
            this.match(StructuredTextParser.PROGRAM);
            this.state = 138;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 118)) & ~0x1F) === 0 && ((1 << (_la - 118)) & 15) !== 0)) {
                {
                this.state = 137;
                this.accessModifier();
                }
            }

            this.state = 140;
            this.match(StructuredTextParser.ID);
            this.state = 144;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 72)) & ~0x1F) === 0 && ((1 << (_la - 72)) & 447) !== 0)) {
                {
                {
                this.state = 141;
                this.varDeclSection();
                }
                }
                this.state = 146;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 147;
            this.statementSection();
            this.state = 148;
            this.match(StructuredTextParser.END_PROGRAM);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 4, StructuredTextParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 151;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 56) {
                {
                this.state = 150;
                this.attribute();
                }
            }

            this.state = 153;
            this.match(StructuredTextParser.FUNCTION);
            this.state = 155;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 118)) & ~0x1F) === 0 && ((1 << (_la - 118)) & 15) !== 0)) {
                {
                this.state = 154;
                this.accessModifier();
                }
            }

            this.state = 157;
            this.match(StructuredTextParser.ID);
            this.state = 160;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 158;
                this.match(StructuredTextParser.T__0);
                this.state = 159;
                this.type_();
                }
            }
